<resources>
    <string name="app_name">Siren</string>
    <string name="need_camera_permissions">This app needs the WRITE_EXTERNAL_STORAGE, RECORD_AUDIO
        and CAMERA permissions to capture video from the camera.</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete_question">Do you want to delete this item?</string>


    <string name="userInfo">User Info</string>

    <string name="userNameId">userNameId</string>
    <string name="pref_user_name">User name</string>
    <string name="pref_user_name_summary">Set the user name</string>

    <string name="notifications">Notifications</string>

    <string name="pref_notifications">Activate notifications</string>
    <string name="pref_notifications_summary">Receive alert notifications</string>

    <string name="userEmailId">userEmailId</string>
    <string name="pref_user_email">User email</string>
    <string name="pref_user_email_summary">Set the user email</string>

    <string name="userPhoneId">userPhoneId</string>
    <string name="pref_user_phone">User phone</string>
    <string name="pref_user_phone_summary">Set the user phone</string>

    <string name="security">Security</string>

    <string name="userPinId">userPinId</string>
    <string name="pref_user_pin">User pin</string>
    <string name="pref_user_pin_summary">Set the user pin</string>
</resources>
