<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/userInfo" >
        <EditTextPreference
            android:inputType="text"
            android:maxLength="10"
            android:key="@string/userNameId"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_user_name" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/notifications" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefNotifications"
            android:title="@string/pref_notifications"
            android:summary="@string/pref_notifications_summary">
        </CheckBoxPreference>

        <EditTextPreference
            android:inputType="textEmailAddress"
            android:key="@string/userEmailId"
            android:summary="@string/pref_user_email_summary"
            android:title="@string/pref_user_email" />

        <EditTextPreference
            android:inputType="phone"
            android:key="@string/userPhoneId"
            android:summary="@string/pref_user_phone_summary"
            android:title="@string/pref_user_phone" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security" >
        <EditTextPreference
            android:inputType="numberPassword"
            android:maxLength="4"
            android:key="@string/userPinId"
            android:summary="@string/pref_user_pin_summary"
            android:title="@string/pref_user_pin" />
    </PreferenceCategory>

</PreferenceScreen>